Saving progress so far.